# differential_projection_voxel_renderer

./: .gitignore  Cargo.toml  README.md  collate_rust_files.sh
benches/: differential_projection.rs  meshing.rs  microbench.rs  rendering.rs  span_walker.rs  world.rs
reference_material/: Sparse Voxels Rasterization: Real-time High-fidelity Radiance Field Rendering.txt  rust-study-case-optimizations.txt
src/: lib.rs  main.rs  world.rs
src/camera/: mod.rs
src/meshing/: binary_greedy.rs  face_packets.rs  mesh.rs  mod.rs
src/perf/: mod.rs  profiling.rs
src/rendering/: culling.rs  differential_projection.rs  framebuffer.rs  hiz_buffer.rs  macrotile.rs  macrotile_renderer.rs  mod.rs  occlusion.rs  packet_pipeline.rs  rasterizer.rs  shading.rs  simd_vertex.rs  span_walker.rs  texture.rs
src/voxel/: block_type.rs  chunk.rs  mod.rs
tests/: differential_projection_tests.rs  fast_perspective_divide_tests.rs  horizon_culling_extended_tests.rs  horizon_culling_fix_validation.rs  horizon_culling_pipeline_movement_tests.rs  horizon_culling_reproduction_test.rs  horizon_culling_same_height_tests.rs  horizon_culling_tests.rs  horizon_movement_analysis.rs  meshing_tests.rs  rasterizer_gap_test.rs  rasterizer_slice_gap_test.rs  rasterizer_x_gap_test.rs  rendering_pipeline_tests.rs  shading_tests.rs  span_walker_bug_reproduction.rs  span_walker_differential_tests.rs  span_walker_fuzz_tests.rs
